--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -1,6 +1,7 @@
 body {
     font-family: 'TeachableSans-Regular', sans-serif;
     font-size: 12px;
+    line-height: 17px;
     letter-spacing: 1.08px;
     background-color: #F5F6F7;
 }
