amazon genres/languages - index components

--- a/app/views/settings/show.html.erb
+++ b/app/views/settings/show.html.erb
@@ -8,3 +8,5 @@
 <div id="genres-index">replace me</div>
 <div id="topics-index">replace me</div>
 <div id="merchandise-types-index">replace me</div>
+<div id="amazon-genres-index">replace me</div>
+<div id="amazon-languages-index">replace me</div>
