institution orders - routes/controller/views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
                 <li><a href="/bookings">Bookings</a></li>
                 <li><a href="/virtual_bookings">Virtual Bookings</a></li>
                 <li><a href="/institutions">Edu Institutions</a></li>
+                <li><a href="/institution_orders">Edu Orders</a></li>
                 <li><a href="/bookers">Bookers</a></li>
                 <li><a href="/in_theaters">In Theaters</a></li>
                 <li><a href="/dvd_customers">DVD Customers</a></li>
